syntax = "proto3";
package exomonad.hook;

import "exomonad/common.proto";

// Claude Code hook types for pre/post tool use, session events, etc.

// Types of hooks that Claude Code can trigger.
enum HookType {
  HOOK_TYPE_UNSPECIFIED = 0;
  HOOK_TYPE_PRE_TOOL_USE = 1;      // Before a tool is executed
  HOOK_TYPE_POST_TOOL_USE = 2;     // After a tool completes
  HOOK_TYPE_SESSION_START = 3;     // Session beginning
  HOOK_TYPE_SESSION_END = 4;       // Session ending
  HOOK_TYPE_SUBAGENT_STOP = 5;     // Subagent stopping
  HOOK_TYPE_NOTIFICATION = 6;      // Status notifications
  HOOK_TYPE_STOP = 7;              // Claude wants to stop
  HOOK_TYPE_PRE_COMPACT = 8;       // Before context compaction
  HOOK_TYPE_PERMISSION_REQUEST = 9; // Permission dialog
  HOOK_TYPE_USER_PROMPT_SUBMIT = 10; // User submitted prompt
}

// Decision returned by stop hooks.
enum StopDecision {
  STOP_DECISION_UNSPECIFIED = 0;
  STOP_DECISION_ALLOW = 1;   // Allow stop/continue
  STOP_DECISION_BLOCK = 2;   // Block the action
  STOP_DECISION_ASK = 3;     // Ask user for input
}

// Input for PreToolUse hook.
message PreToolUseInput {
  string tool_name = 1;              // Name of the tool being called
  string tool_input = 2;             // JSON-encoded tool input
  string tool_use_id = 3;            // Unique ID for this tool invocation
  exomonad.common.SessionId session_id = 4;
}

// Output for PreToolUse hook.
message PreToolUseOutput {
  exomonad.common.ToolPermission permission = 1;
  string reason = 2;                  // Reason for the decision
  string updated_input = 3;           // Modified tool input (JSON)
}

// Input for PostToolUse hook.
message PostToolUseInput {
  string tool_name = 1;
  string tool_input = 2;              // Original JSON-encoded input
  string tool_response = 3;           // JSON-encoded response
  string tool_use_id = 4;
  exomonad.common.SessionId session_id = 5;
}

// Output for PostToolUse hook.
message PostToolUseOutput {
  string additional_context = 1;      // Context to add for the model
}

// Input for SessionStart hook.
message SessionStartInput {
  exomonad.common.SessionId session_id = 1;
  string working_directory = 2;
  string permission_mode = 3;         // "default", "plan", "acceptEdits", etc.
}

// Output for SessionStart hook.
message SessionStartOutput {
  string system_message = 1;          // System message to prepend
}

// Input for SessionEnd hook.
message SessionEndInput {
  exomonad.common.SessionId session_id = 1;
  string transcript_path = 2;
}

// Output for SessionEnd hook.
message SessionEndOutput {
  // Currently empty, just acknowledges the event
}

// Input for SubagentStop hook.
message SubagentStopInput {
  exomonad.common.SessionId session_id = 1;
  bool stop_hook_active = 2;
}

// Output for SubagentStop hook.
message SubagentStopOutput {
  StopDecision decision = 1;
  string reason = 2;
}

// Generic hook input envelope.
message HookInput {
  HookType hook_type = 1;
  oneof input {
    PreToolUseInput pre_tool_use = 2;
    PostToolUseInput post_tool_use = 3;
    SessionStartInput session_start = 4;
    SessionEndInput session_end = 5;
    SubagentStopInput subagent_stop = 6;
  }
}

// Generic hook output envelope.
message HookOutput {
  bool continue_ = 1;                  // false = stop processing (note: field name)
  string stop_reason = 2;              // Reason if continue_ is false
  bool suppress_output = 3;            // Suppress hook output in logs
  string system_message = 4;           // Message to inject

  oneof output {
    PreToolUseOutput pre_tool_use = 10;
    PostToolUseOutput post_tool_use = 11;
    SessionStartOutput session_start = 12;
    SessionEndOutput session_end = 13;
    SubagentStopOutput subagent_stop = 14;
  }
}
